# SernVia

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: node.js.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icons
src-tauri/src/: categories.rs  lib.rs  main.rs  monitor.rs  screenshot.rs  screenshot_crypto.rs  windows_api.rs
src/components/: ActiveAppCard.tsx  ActivityHistory.tsx  AppUsageList.tsx  BrowserTimePanel.tsx  PasswordGuard.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx
src/components/ui/: calendar.tsx  date-picker.tsx  dialog.tsx  label.tsx  popover.tsx  select.tsx  switch.tsx  tooltip.tsx
src/lib/: cloud-api.ts  format.ts
src/pages/: AppDetailPage.tsx  CategoriesPage.tsx  DetailsPage.tsx  HomePage.tsx  Layout.tsx  ReviewPage.tsx  SettingsPage.tsx  StatsPage.tsx
